--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,30 @@ p {
   min-height: 1px;
   margin: 0 2% 20px;
 }
-@media (min-width: 320px) {
+@media (min-width: 325px) {
   .container {
-    width: 320px;
-  }
+    width: 325px;
+   } 
+   header .hero h1{
+    font-size: .85em;
+   }
+   header .hero p{
+    font-size: .85em;
+   }
+   .small{
+    font-size: .85em;
+   }
+   .testimonials p.users{
+    font-size: .85em;
+    
+   }
+   footer nav{
+    margin: auto 1em; 
+   }
+   footer .right-footer-block-one-third {
+   display: none;
+ }
+}
 @media (min-width: 768px) {
   .container {
     width: 750px;
@@ -70,11 +90,14 @@ p {
    }
  }
   @media (min-width: 1600px) {
-    .hero h1 {
-     font-size: 64px;
+    .container-hero{
+      width: 1550px;
+    }
+    header .hero h1 {
+     font-size: 1.5em;
    }
-    .hero p {
-     font-size: 38px;
+    header .hero p {
+     font-size: 1.5em;
    }
 }
 /* Header */
@@ -87,10 +110,19 @@ header nav{
   padding: 1 em 0;
 }
 header nav ul {
+  display: inline-block;
+  text-align: center;
+  
+ 
+}
+@media (min-width: 992px){
+  header nav ul {
   display: inline;
   text-align: right;
   float: right;
   margin: 0;
+}
+
 }
 header nav ul > li {
   list-style-type: none;
@@ -131,6 +163,7 @@ header .hero {
  header .hero img {
    display: block;
    margin:3em auto 0;
+   width: 100%;
  }
   .btn {
    border-radius: 4px;
