--- a/css/dropit.css
+++ b/css/dropit.css
@@ -8,17 +8,17 @@
  */
 
 /* These styles assume you are using ul and li */
-.dropit .dropit-inverse{
+.dropit {
     list-style: none;
 	padding: 0;
 	margin: 15px 0 0;
     float: right;
     display: inline-block;
 }
-.dropit .dropit-inverse .dropit-trigger { position: relative; }
-.dropit .dropit-submenu {
+.dropit .dropit-trigger { position: relative; }
+.dropit.dropit-base .dropit-submenu {
     position: absolute;
-    top bottom: 100%;
+    top: 100%;
     right: 0; /* dropdown left or right */
     z-index: 1000;
     display: none;
@@ -27,13 +27,24 @@
 	padding: 20px;
 	margin: 20px 0 0;
 }
-.dropit .dropit-inverse .dropit-open .dropit-submenu { 
+.dropit.dropit-inverse .dropit-submenu {
+    position: absolute;
+    bottom: 100%;
+    right: 0; /* dropdown left or right */
+    z-index: 1000;
+    display: none;
+    min-width: 100px;
+    list-style: none;
+  padding: 20px;
+  margin: 20px 0 0;
+}
+.dropit .dropit-open .dropit-submenu { 
     display: block;
     background: #FFFFFF;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.30);
     border-radius: 4px; 
 }
- .dropit .dropit-inverse .dropit-open .dropit-submenu:after {
+ .dropit.dropit-base .dropit-open .dropit-submenu:after {
   content: " ";
   position: absolute;
   border-style: solid;
@@ -45,14 +56,26 @@
   top: -8px;
   right: 10px;
  }
- .dropit .dropit-inverse .dropit-open .dropit-submenu li {
+ .dropit.dropit-inverse .dropit-open .dropit-submenu::after {
+  content: " ";
+  position: absolute;
+  border-style: solid;
+  border-width: 8px 8px 0;
+  border-color: #FFFFFF transparent;
+  display: block;
+  width: 0;
+  z-index: 1;
+  bottom: -8px;
+  right: 10px;
+ }
+ .dropit .dropit-open .dropit-submenu li {
   display: block;
   margin-bottom: 20px;
  }
- .dropit .dropit-inverse .dropit-open .dropit-submenu li:last-child {
+ .dropit .dropit-open .dropit-submenu li:last-child {
   margin-bottom: 0px;
  }
- .dropit .dropit-inverse .dropit-open .dropit-submenu li a {
+ .dropit .dropit-open .dropit-submenu li a {
   color:#34495E;
   text-decoration: none;
   font-family: "Lato", Helvetica, Arial, sans-serif;
