--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ p {
   line-height: 19px;
   font-weight: 100;
 }
+li {
+  list-style: none;
+}
 /* GRID */
 .container {
   margin-right: auto;
@@ -338,19 +341,16 @@ header .hero {
 /* FOOTER */
  footer {
    background-color: #34495E;
-   background-image: linear-gradient(to top,
-      #3498DB 0%, #3498DB 50%, #34495E 50%, #34495E 100%);
    color: #FFFFFF;
-   height: 150px;
+   height: 200px;
    position: relative;
-   overflow: hidden;
    z-index: 0;
  }
  footer p, footer nav ul {
    font-size:14px;
    font-weight:100;
    text-align: center;
-   margin: 10px auto 0;
+   margin: -30px;
  }
  footer nav ul li {
    list-style-type: none;
@@ -364,7 +364,6 @@ header .hero {
    background-color: transparent;
  }
  footer .logo{
-   padding: 2.35em 0;
    margin: 0 auto;
    display: block;
  }
@@ -374,6 +373,7 @@ header .hero {
      background-image: linear-gradient(to left,
         #3498DB 0%, #3498DB 33.33337%, #34495E 33.33337%, #34495E 100%);
      height: 100px;
+     overflow: hidden;
    }
    footer p, footer nav ul{
      padding: 2em 0;
